edit .ipynb file

--- a/day78-Nobel-Prize-Analysis-plotly-matplotlib-seaborn/Nobel_Prize_Analysis.ipynb
+++ b/day78-Nobel-Prize-Analysis-plotly-matplotlib-seaborn/Nobel_Prize_Analysis.ipynb
@@ -1806,7 +1806,9 @@
       },
       "source": [
         "is_winner = df_data.duplicated(subset=['full_name'], keep=False)\n",
-        "df_data[is_winner].full_name.nunique()"
+        "multiple_winners = df_data[is_winner]\n",
+        "print(f'There are {multiple_winners.full_name.nunique()}' \\\n",
+        "      ' winners who were awarded the prize more than once.')"
       ],
       "execution_count": null,
       "outputs": [
